--- a/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/Template/TemplateText.html
+++ b/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/Template/TemplateText.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<!-- Copyright (c) Lester J. Clark 2021 - All Rights Reserved -->
+<!-- Copyright(c) Lester J. Clark and Contributors. -->
+<!-- Licensed under the MIT License. -->
+<!-- TemplateText.cs -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
@@ -53,7 +54,10 @@
   <p>
     The 'About' menu item displays the application About Box.
   </p>
-  <h6>TemplateText</h6>
-  <h6>Copyright © Lester J Clark 2021</h6>
+  <h6>
+    TemplateText<br />
+    Copyright © Lester J Clark and Contributors.<br />
+    Licensed under the MIT License.
+  </h6>
 </body>
 </html>
