--- a/CSS/CodeDoc.css
+++ b/CSS/CodeDoc.css
@@ -10,6 +10,20 @@ body {
 }
 
 /* Type/Class Selectors */
+div.PathText {
+  color: #003399;
+  font-family: Verdana, Tahoma, Arial, Sans-Serif;
+  font-size: 9pt;
+  /*font-weight: bold;*/
+  padding-left: 15px;
+  padding-top: 5px;
+}
+
+div.RedText {
+  color: red;
+  padding-left: 15px;
+}
+
 div.SectionContainer {
   padding-left: 17px;
   padding-right: 17px;
@@ -33,33 +47,9 @@ div.Text3 {
   padding-left: 45px;
 }
 
-div.PathText {
-  color: #003399;
-  font-family: Verdana, Tahoma, Arial, Sans-Serif;
-  font-size: 9pt;
-  /*font-weight: bold;*/
-  padding-left: 15px;
-  padding-top: 5px;
-}
-
-div.RedText {
-  color: red;
-  padding-left: 15px;
-}
-
 table.CodeTable {
   font-family: Courier New, Monospace;
   font-size: 9pt;
-  width: 100%;
-}
-
-table.ListTable {
-  font-family: Courier New, Monospace;
-  font-size: 9pt;
-  margin-bottom: 0px;
-  padding-bottom: 5px;
-  padding-left: 15px;
-  padding-top: 5px;
   width: 100%;
 }
 
@@ -72,6 +62,30 @@ td.CodeTable {
   padding-right: 10px;
   padding-top: 5px;
   text-align: left;
+}
+
+th.CodeTable {
+  background-color: #efeff7;
+  border-bottom: solid #c8cdde 1px;
+  color: #000066;
+  font-family: Verdana, Tahoma, Arial, Sans-Serif;
+  font-size: 8pt;
+  font-weight: bold;
+  padding-bottom: 1px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 1px;
+  text-align: left;
+}
+
+table.ListTable {
+  font-family: Courier New, Monospace;
+  font-size: 9pt;
+  margin-bottom: 0px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  padding-top: 5px;
+  width: 100%;
 }
 
 td.ListTable {
@@ -90,21 +104,7 @@ td.ListTableMissing {
   padding-top: 2px;
 }
 
-th.CodeTable {
-  background-color: #efeff7;
-  border-bottom: solid #c8cdde 1px;
-  color: #000066;
-  font-family: Verdana, Tahoma, Arial, Sans-Serif;
-  font-size: 8pt;
-  font-weight: bold;
-  padding-bottom: 1px;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 1px;
-  text-align: left;
-}
-
-/* Tag/ID Selectors */
+/* Type/ID Selectors */
 div#Header {
   background-color: #d4dfff;
   border-bottom: solid #c8cdde 1px;
@@ -128,7 +128,25 @@ div#Title {
   margin-right: 20px;
 }
 
+.Title1 {
+  color: #003399;
+  font-family: Verdana, Tahoma, Arial, Sans-Serif;
+  font-size: 9pt;
+  font-weight: bold;
+  padding-left: 15px;
+  padding-top: 5px;
+}
+
+/* Backward Compatible */
 .title2 {
+  color: #003399;
+  font-family: Verdana, Tahoma, Arial, Sans-Serif;
+  font-size: 8pt;
+  padding-left: 15px;
+  padding-top: 5px;
+}
+
+.Title2 {
   color: #003399;
   font-family: Verdana, Tahoma, Arial, Sans-Serif;
   font-size: 8pt;
