--- a/HTML/GenTextEditor/Template/TemplateTab.html
+++ b/HTML/GenTextEditor/Template/TemplateTab.html
@@ -27,7 +27,21 @@
       </p>
       <div class="Heading2">Template Tab Controls</div>
       <h4>Template TextBox</h4>
+      <p>
+        The Template TextBox contains the name of the file retrieved with the
+        Template Button. It is the name of the file where the current template
+        code will be saved if the "Save" menu item is selected from the
+        Template Text menu.
+      </p>
+      <p>
+        The target saved file name can be changed by editing the name in the
+        Template TextBox.
+      </p>
       <h4>Template Button</h4>
+      <p>
+        The Template Button displays a File Open dialog to open the desired
+        Template file.
+      </p>
       <p>
         <a href="TemplateText.html">Template Text</a>
       </p>
