--- a/HTML/GenTextEditor/Template/TemplateTab.html
+++ b/HTML/GenTextEditor/Template/TemplateTab.html
@@ -22,6 +22,9 @@
     </div>
     <div class='Text'>
       <p>
+        <img src="TemplateTab.jpg" alt="TemplateTab" width="450" />
+      </p>
+      <p>
         The GenText Editor contains the Template Tab with the Template TextBox,
         Template Button and Template Text.
       </p>
