--- a/HTML/GenTextEditor/Template/TemplateTab.html
+++ b/HTML/GenTextEditor/Template/TemplateTab.html
@@ -12,7 +12,8 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../../Tutorials.html">Home</a>
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenTextEditor.html">GenTextEditor</a>
       / TemplateTab
     </div>
@@ -50,7 +51,8 @@
       </p>
     </div>
     <div class="PathText">
-      / <a href="../../Tutorials.html">Home</a>
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenTextEditor.html">GenTextEditor</a>
       / TemplateTab
     </div>
