--- a/HTML/GenTextEditor/Template/TemplateText.html
+++ b/HTML/GenTextEditor/Template/TemplateText.html
@@ -12,7 +12,8 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../../Tutorials.html">Home</a>
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenTextEditor.html">GenTextEditor</a>
       / <a href="TemplateTab.html">TemplateTab</a>
       / TemplateText
@@ -68,7 +69,8 @@
       </p>
     </div>
     <div class="PathText">
-      / <a href="../../Tutorials.html">Home</a>
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../GenTextEditor.html">GenTextEditor</a>
       / <a href="TemplateTab.html">TemplateTab</a>
       / TemplateText
