--- a/HTML/GenTextEditor/Template/TemplateTab.html
+++ b/HTML/GenTextEditor/Template/TemplateTab.html
@@ -49,6 +49,9 @@
       <p>
         <a href="TemplateText.html">Template Text</a>
       </p>
+      <p>
+        <a href="TemplateSyntax.html">Template Text Syntax</a>
+      </p>
     </div>
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
