--- a/HTML/GenTextEditor/Template/TemplateSyntax.html
+++ b/HTML/GenTextEditor/Template/TemplateSyntax.html
@@ -54,23 +54,23 @@
 #IfBegin      - The beginning of an If block.
 #IfElse       - The beginning of an Else block.
 #IfEnd        - The end of an If block.
-#Value        - The replacement values available for the section.</pre>
-    </div>
-    <p>
-      The "#Value" directive is used by the GenTextEdit program. It has
-      no effect on the GenText program or generated code.
-    </p>
+#Value        - A replacement name for the parent section.</pre>
+      <p>
+        The "#Value" directive is used by the GenTextEdit program. It has
+        no effect on the GenText program or generated code.
+      </p>
 
-    <div class="Heading2">Replacement Names</div>
-    <p>
-      Replacement names are placeholders for the values from the GenText Data
-      xml file.
-    </p>
-    <p>
-      A Replacement name starts and ends with an underscore. No spaces are
-      allowed in a replacement name or between the name and the enclosing
-      underscore values. This is a replacement name: "_ClassName_".
-    </p>
+      <div class="Heading2">Replacement Names</div>
+      <p>
+        Replacement names are placeholders for the values from the GenText Data
+        xml file. Replacement names are case sensitive.
+      </p>
+      <p>
+        A Replacement name starts and ends with an underscore. No spaces are
+        allowed in a replacement name or between the name and the enclosing
+        underscore values. This is a replacement name: "_ClassName_".
+      </p>
+    </div>
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
