--- a/HTML/GenTextEditor/Template/TemplateTab.html
+++ b/HTML/GenTextEditor/Template/TemplateTab.html
@@ -52,6 +52,9 @@
       <p>
         <a href="TemplateSyntax.html">Template Text Syntax</a>
       </p>
+      <p>
+        <a href="TemplateProcess.html">Template Processing</a>
+      </p>
     </div>
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
