--- a/HTML/GenTextEditor/Template/TemplateProcess.html
+++ b/HTML/GenTextEditor/Template/TemplateProcess.html
@@ -50,7 +50,7 @@
       <p>
         As each Item is processed, the replacement names are replaced with the
         available replacement values for the current Item from the Data XML
-        file.
+        file. Replacement Names are case sensitive.
       </p>
       <p>
         If a replacement name is not found in the current Section Item, then
@@ -68,6 +68,18 @@
         If there are no more Items to process in the current Section, then the
         current section XML data is removed from the Active Item list and
         processing continues with the next line after the #SectionEnd directive.
+      </p>
+
+      <div class="Heading2">If Processing</div>
+      <p>
+        The syntax for the #IfBegin directive is: #IfBegin _ReplacementName_
+        Value. The directive "#IfBegin _DataType_ String" is true if the
+        Replacement Name exists for the current Item and its content is
+        "String".
+      </p>
+      <p>
+        Besides a specific value, the Value can also be "True", "False" or
+        "NotNull". It is not case sensitive.
       </p>
     </div>
     <div class="PathText">
