--- a/HTML/GenTextEditor/Template/TemplateTab.html
+++ b/HTML/GenTextEditor/Template/TemplateTab.html
@@ -37,6 +37,10 @@
         code will be saved if the "Save" menu item is selected from the
         Template Text menu.
       </p>
+      <p> 
+        The default template path is:<br />
+        C:\Users\UserName\Documents\Visual Studio 2022\LJCProjectsDev\CoreUtilities\LJCGenText\LJCGenTableCode\bin\Debug\Templates
+      </p>
       <p>
         The target saved file name can be changed by editing the name in the
         Template TextBox.
