--- a/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/Template/TemplateText.html
+++ b/CoreUtilities/LJCGenText/LJCGenTextEdit/Help/Template/TemplateText.html
@@ -25,6 +25,11 @@
     is displayed. This shows that the touch is considered a right mouse
     click. Remove your finger and the context menu will be displayed.
   </p>
+  <b>Create Sections</b>
+  <p>
+    The 'Create Sections' menu item creates sample data based on the data
+    defined in the Template.
+  </p>
   <b>Generate Output</b>
   <p>
     The 'Generate Output' menu item generates the Output Text based on the
@@ -36,11 +41,6 @@
   <p>
     The 'Save' menu item saves the template using the name specified in the
     Template TextBox.
-  </p>
-  <b>Create Sections</b>
-  <p>
-    The 'Create Sections' menu item creates sample data based on the data
-    defined in the Template.
   </p>
   <b>Exit</b>
   <p>
@@ -56,7 +56,7 @@
   </p>
   <h6>
     TemplateText<br />
-    Copyright © Lester J Clark and Contributors.<br />
+    Copyright &copy; Lester J Clark and Contributors.<br />
     Licensed under the MIT License.
   </h6>
 </body>
