--- a/HTML/GenTextEditor/Template/TemplateText.html
+++ b/HTML/GenTextEditor/Template/TemplateText.html
@@ -68,6 +68,7 @@
         The 'About' menu item displays the application About Box.
       </p>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
@@ -77,9 +78,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
