--- a/HTML/GenTextEditor/Template/TemplateProcess.html
+++ b/HTML/GenTextEditor/Template/TemplateProcess.html
@@ -82,6 +82,7 @@
         "NotNull". It is not case sensitive.
       </p>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
@@ -91,9 +92,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
