--- a/HTML/GenTextEditor/Template/TemplateSyntax.html
+++ b/HTML/GenTextEditor/Template/TemplateSyntax.html
@@ -71,6 +71,7 @@
         underscore values. This is a replacement name: "_ClassName_".
       </p>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
@@ -80,9 +81,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
