--- a/HTML/GenTextEditor/Template/TemplateTab.html
+++ b/HTML/GenTextEditor/Template/TemplateTab.html
@@ -60,6 +60,7 @@
         <a href="TemplateProcess.html">Template Processing</a>
       </p>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
@@ -68,9 +69,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
