--- a/HTML/GenTextEditor/Template/TemplateText.html
+++ b/HTML/GenTextEditor/Template/TemplateText.html
@@ -38,6 +38,10 @@
         is displayed. This shows that the touch is considered a right mouse
         click. Remove your finger and the context menu will be displayed.
       </p>
+      <h4>File Edit</h4>
+      <p>
+        Displays a File Open Dialog to allow selection of a text file for editing.
+      </p>
       <h4>Create Sections</h4>
       <p>
         The 'Create Sections' menu item creates sample data based on the data
