--- a/CSS/CodeDoc.css
+++ b/CSS/CodeDoc.css
@@ -117,6 +117,7 @@ div#Header {
   font-family: Verdana, Tahoma, Arial, Sans-Serif;
   font-size: 9pt;
   font-weight: bold;
+  margin-top: 20px;
 }
 
 div#Title {
