--- a/JavascriptCommon/Menu.css
+++ b/JavascriptCommon/Menu.css
@@ -1,4 +1,4 @@
-/* Copyright(c) Lester J. Clark 2022 - All Rights Reserved */
+/* Copyright (c) Lester J. Clark 2000, 2019 - All Rights Reserved */
 /* Menu.css */
 
 /* */
