--- a/JavascriptCommon/LogOn.css
+++ b/JavascriptCommon/LogOn.css
@@ -1,42 +1,54 @@
 /* Copyright Lester J. Clark and Contributors */
 /* Licensed under the MIT license.*/
-/* Main.html */
+/* Logon.css */
 
-button {
-  margin-top: 3px;
-  margin-bottom 3px;
+.cellLeft {
+  display: table-cell;
+  text-align: initial;
 }
 
-/* Needs Margin: auto for all contents to center. */
-form {
+.cell {
+  display: table-cell;
+  padding-left: 6px;
+  text-align: initial;
+}
+
+.form {
   background-color: paleturquoise;
-  border-color: black;
+  border: 1px solid black;
   border-radius: 8px;
-  border-style: solid;
-  border-width: 1px;
+  border-spacing: 6px;
+  width: 232px;
+}
+
+/* Needs Margin: auto to center. */
+.formCenter {
+  background-color: paleturquoise;
+  border: 1px solid black;
+  border-radius: 8px;
+  border-spacing: 6px;
   margin: auto;
-  width: 50%;
+  width: 232px;
 }
 
-.input {
-  margin-top: 3px;
-}
-
-.inputSubmit {
-  margin-bottom: 3px;
-  margin-top: 3px;
-}
-
-/* Make all labels the same width. */
-/* This makes the input fields line up. */
-.label {
-  display: inline-block;
-  margin-top: 3px;
-  width: 100px;
+.page {
+  background-color: aliceblue;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 .pageCenter {
   background-color: aliceblue;
+  margin-left: 25px;
+  margin-right: 25px;
   text-align: center;
-  max-width: 95%;
+}
+
+.row {
+  display: table-row;
+}
+
+.table {
+  border-spacing: 4px;
+  display: table;
 }
