--- a/JavascriptCommon/LogOn.css
+++ b/JavascriptCommon/LogOn.css
@@ -14,7 +14,7 @@
 }
 
 .form {
-  background-color: paleturquoise;
+  background-color: lightblue;
   border: 1px solid black;
   border-radius: 8px;
   border-spacing: 6px;
