--- a/JavascriptCommon/CSS/TableLayout.css
+++ b/JavascriptCommon/CSS/TableLayout.css
@@ -8,12 +8,12 @@
   text-align: initial;
 }
 
-.cellFirst {
+.label {
   display: table-cell;
   text-align: initial;
 }
 
-.cellRightAlign {
+.labelRight {
   display: table-cell;
   text-align: right;
 }
@@ -23,6 +23,6 @@
 }
 
 .table {
-  border-spacing: 4px;
+  border-spacing: 8px;
   display: table;
 }
