--- a/JavascriptCommon/CSS/Page.css
+++ b/JavascriptCommon/CSS/Page.css
@@ -6,4 +6,6 @@
   background-color: lightblue; /* aliceblue */
   margin-left: 25px;
   margin-right: 25px;
+  padding-right: 20px;
+  border-left: 0px solid black;
 }
